# enphylope

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: requirements.txt
src/: __init__.py  constants.py  core.py  enphylope.py  envelope.py
src/tests/: _test_general.py
tests/: _test_general.py
