[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enphylope"
version = "0.1.0"
description = "For calculations of physical quantities. "
authors = [
    { name = "Yuzhe Zhang", email = "yuhzhang@uni-mainz.de" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    # see docs/requirements.txt)
]

[tool.setuptools]
zip-safe = false


requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/Yuzhe98/enphylope"